--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <table role='presentation' width='100%' cellspacing='0' cellpadding='0' border='0'>
                                 <tr>
                                     <td style='padding:10px 0;'>
-                                        <p style='margin:0 0 20px; font-size:16px;'>By sharing the iBee Analytics newsletter with your friends, you can earn some free iBee swag!.</p>                
+                                        <p style='margin:0 0 20px; font-size:16px;'>By sharing the iBee Analytics newsletter with your friends, you can earn some free iBee swag!</p>                
                                         <img src='https://ibeeanalytics.com/newsletter/product.gif' alt='Products' style='width:100%; max-width:560px; border-radius:8px;'>
                                         <ul style='line-height:1.6;'>
                                             <li style='font-size: 16px;'>5 Stickers</li>
