--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                                     <td style='padding:10px 0;'>
                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>ChatGPT-40 is a money-making machine.</h2>
                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>5 ChatGPT-4o prompts that'll make you rich:</h2>
+                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>Features:</h2> 
                                     <ul style='line-height:1.6;'>
                                         <li style='color:#fb7527; font-size: 15px;'>PEST Analysis Prompt:<span style='color:#000000;'>ChatGPT, conduct a PEST analysis for [Your Industry] to identify external factors affecting my business.</span></li>
                                         <li style='color:#fb7527; font-size: 15px;'>The Five Whys Prompt:<span style='color:#000000;'>ChatGPT, use the Five Whys technique to identify the root cause of [Specific Problem] in my business.</span></li>
