--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>5 ChatGPT-4o prompts that'll make you rich:</h2>
                                      <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>Features:</h2> 
                                     <ul style='line-height:1.6;'>
-                                        <li style='color:#fb7527; font-size: 15px;'>PEST Analysis Prompt:<span style='color:#000000;'>ChatGPT, conduct a PEST analysis for [Your Industry] to identify external factors affecting my business.</span></li>
-                                        <li style='color:#fb7527; font-size: 15px;'>The Five Whys Prompt:<span style='color:#000000;'>ChatGPT, use the Five Whys technique to identify the root cause of [Specific Problem] in my business.</span></li>
-                                        <li style='color:#fb7527; font-size: 15px;'>Customer Journey Mapping Prompt:<span style='color:#000000;'>ChatGPT, help me create a customer journey map for [Your Product/Service]to improve user experience and satisfaction.</span></li>
-                                        <li style='color:#fb7527; font-size: 15px;'>Growth Hacking Strategies Prompt:<span style='color:#000000;'>ChatGPT, suggest some growth hacking strategies to rapidly expand my customer base for [Your Product/Service].</span></li>
-                                        <li style='color:#fb7527; font-size: 15px;'>Lean Startup Methodology Prompt:<span style='color:#000000;'>ChatGPT, how can I apply the Lean Startup Methodology to quickly test and validate my [Business Idea/Product]?</span></li>
+                                        <li style='color:#fb7527; font-size: 15px;'>PEST Analysis Prompt:<span style='color:#000000;'>ChatGPT, conduct a PEST analysis for Your Industryto identify external factors affecting my business.</span></li>
+                                        <li style='color:#fb7527; font-size: 15px;'>The Five Whys Prompt:<span style='color:#000000;'>ChatGPT, use the Five Whys technique to identify the root cause of Specific Problem in my business.</span></li>
+                                        <li style='color:#fb7527; font-size: 15px;'>Customer Journey Mapping Prompt:<span style='color:#000000;'>ChatGPT, help me create a customer journey map for Your Product/Serviceto improve user experience and satisfaction.</span></li>
+                                        <li style='color:#fb7527; font-size: 15px;'>Growth Hacking Strategies Prompt:<span style='color:#000000;'>ChatGPT, suggest some growth hacking strategies to rapidly expand my customer base for Your Product/Service.</span></li>
+                                        <li style='color:#fb7527; font-size: 15px;'>Lean Startup Methodology Prompt:<span style='color:#000000;'>ChatGPT, how can I apply the Lean Startup Methodology to quickly test and validate my Business Idea/Product?</span></li>
                                     </ul>
                                     </td>
                                 </tr>
