--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <table role='presentation' width='100%' cellspacing='0' cellpadding='0' border='0'>
                                 <tr>
                                     <td style='padding:10px 0;'>
-                                    <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>ChatGPT-4o is a money-making machine.</h2>
+                                    <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>ChatGPT-4o is a money-making machine,</h2>
                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>5 ChatGPT-4o prompts that'll make you rich:</h2>
                                      <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>Features:</h2> 
                                     <ul style='line-height:1.6;'>
