--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <td style='padding:10px 0;'>
                                     <img src='Assets/Img/Sep-6-1.jpg' alt='Breaking Boundaries: SpaceX Sets New Reusability Record with Falcon 9' style='width:100%; max-width:560px; border-radius:8px;'>
                                     <p style='margin:0 0 20px; font-size:16px;'></p> 
-                                     <h2 style='margin:0 0 10px; font-size:20px; color:#00008b;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>Matter of Fact:</h2> 
+                                    <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>Matter of Fact:</h2> 
                                   <ul style='line-height:1.6;'>
                                      <li style='color:#fb7527; font-size: 15px;'>Record Reusability:<span style='color:#000000;'>Falcon 9 booster completed its 20th mission on Sept 14, 2024.</span></li>
                                     <li style='color:#fb7527; font-size: 15px;'>Mission:<span style='color:#000000;'>Launched 50 Starlink satellites into low Earth orbit (LEO).</span></li>
