--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <tr>
                                     <td style='padding:10px 0;'>
                                     <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>ChatGPT-4o is a money-making machine,</h2>
-                                    <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>5 ChatGPT-4o prompts that'll make you rich:</h2>
+                                    <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>5 ChatGPT-4o prompts that'll make you rich.</h2>
                                      <h2 style='margin:0 0 10px; font-size:20px; color:#fb7527;'>Features:</h2> 
                                     <ul style='line-height:1.6;'>
                                         <li style='color:#fb7527; font-size: 15px;'>PEST Analysis Prompt:<span style='color:#000000;'>ChatGPT, conduct a PEST analysis for Your Industryto identify external factors affecting my business.</span></li>
