--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <!----------------- Header ends  Editable starts------------------>
                     <tr style='margin:20px 0;display:block;'>
                         <td style='padding:20px;border:2px solid #fb7527;border-radius:10px;'>
-                        <h2 style='margin:0 0 10px; font-size:35px; color:#00008b;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>Buzz-Worthy News from IBee</h2>
-                            <p style='margin:0 0 20px; font-size:20px; font-weight:bold'>Join the fun! Dive into our article, hit subscribe, and share with friends. Don't forget to scroll for a hidden gift🎁</p> 
+                        <h2 style='margin:0 0 10px; font-size:35px; color:#00008b;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>IBee's Must-Read News Is Here!</h2>
+                            <p style='margin:0 0 20px; font-size:20px; font-weight:bold'>Dive into the article, subscribe, and share with your friends. Scroll down for a special hidden gift🎁</p> 
                     </tr>        
                     <tr style='margin:20px 0;'>
                         <td style='padding:20px;border:2px solid #fb7527;border-radius:10px;'>
