--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </table>
                         </td>
                     </tr> 
-                <!----------------- Box with Title, Description, Image, Double List and content ends ------------------>
+               <!----------------- Box with Title, Description, Image, Double List and content ends ------------------>
                 <tr style='margin:20px 0;display:block;'>
                         <td style='padding:20px;border:2px solid #fb7527;border-radius:10px;'>
                             <h2 style='margin:0 0 10px; font-size:20px; color:#333;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>Connect and collect: share and score</h2>  
@@ -108,7 +108,7 @@
                                 <tr>
                                     <td style='padding:10px 0;'>
                                         <img src='Assets/Img/sep-6-4.jpg' alt='Share iBee Analytics' style='width:100%; max-width:560px; border-radius:8px;'>
-                                        <p style='margin:0 0 20px; font-size:16px;'>Win an apple Tv</p>                
+                                        <p style='margin:0 0 20px; font-size:16px;'>Win an Apple TV</p>                
                                     </td>
                                 </tr>
                             </table>
