--- a/index.html
+++ b/index.html
@@ -122,12 +122,13 @@
                                     <td style='padding:10px 0;'>
                                         <img src='Assets/Img/sep-6-5.jpg' alt='Fun Zone with Google' style='width:100%; max-width:560px; border-radius:8px;'>
                                         <h3 style='margin:10px 0; font-size:18px; color:#fb7527;'>Introduction</h3>
-                                        <p style='margin:0 0 20px; font-size:16px;'>Google's suggestion "Did you mean: nag a ram" illustrates the concept of anagrams, where letters are rearranged to form new words or phrases. This clever reference invites users to explore the playful side of language. Anagrams reveal intriguing connections and meanings hidden within our words.</p>                
+                                        <p style='margin:0 0 20px; font-size:16px;'>ag a ram" highlights anagrams, where letters are rearranged to form new words, showing playful connections in language.</p>                
                                         <h3 style='margin:10px 0; font-size:18px; color:#fb7527;'>Instructions to use google anagram in 3 steps </h3>
                                         <ul style='line-height:1.6;'>
-                                            <li style='color:#fb7527; font-size: 15px;'>Open Google Search:<span style='color:#000000;'>Go to your web browser and navigate to the Google homepage (www.google.com).</span></li>
-                                            <li style='color:#fb7527; font-size: 15px;'>Enter Your Word or Phrase:<span style='color:#000000;'>Type "anagram" in the search bar.</span></li>
-                                            <li style='color:#fb7527; font-size: 15px;'>Check Google's Suggestion: <span style='color:#000000;'>Look for Google's playful suggestion, "Did you mean: nag a ram?" This highlights the concept of anagram, where the letters of a word are rearranged to form a new phrase.</span></li>
+                                            <li style='color:#000000; font-size: 15px;'> Open Google (www.google.com).</li>
+                                            <li style='color:#000000; font-size: 15px;'>Type "anagram" in the search bar.</li>
+                                            <li style='color:#000000; font-size: 15px;'>Notice Google's suggestion: "Did you mean: nag a ram?"</li>
+                                         <li style='color:#000000; font-size: 15px;'>This shows how an anagram rearranges letters to form a new phrase.</li>
                             </ul>
                             </td>
                                     </tr>
