--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <td style='padding:10px 0;'>
                                         <img src='Assets/Img/sep-6-5.jpg' alt='Fun Zone with Google' style='width:100%; max-width:560px; border-radius:8px;'>
                                         <h3 style='margin:10px 0; font-size:18px; color:#fb7527;'>Introduction</h3>
-                                        <p style='margin:0 0 20px; font-size:16px;'>ag a ram" highlights anagrams, where letters are rearranged to form new words, showing playful connections in language.</p>                
+                                        <p style='margin:0 0 20px; font-size:16px;'> nag a ram" highlights anagrams, where letters are rearranged to form new words, showing playful connections in language.</p>                
                                         <h3 style='margin:10px 0; font-size:18px; color:#fb7527;'>Instructions to use google anagram in 3 steps </h3>
                                         <ul style='line-height:1.6;'>
                                             <li style='color:#000000; font-size: 15px;'> Open Google (www.google.com).</li>
