--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <table role='presentation' width='100%' cellspacing='0' cellpadding='0' border='0'>
                                 <tr>
                                     <td style='padding:10px 0;'>
-                                        <img src='Assets/Img/sep-6-2.jpg' alt='Climate Change and Sustainability: Paving the Path to a Greener Future.' style='width:100%; max-width:560px; border-radius:8px;'>
+                                        <img src='Assets/Img/sep-6-2.jpg' alt='Climate Change and Sustainability: Paving the Path to a Greener Future' style='width:100%; max-width:560px; border-radius:8px;'>
                                          <p style='margin:0 0 20px; font-size:16px;'>As climate change accelerates, the global focus is shifting towards sustainable solutions that safeguard the environment and future generations. Here are key developments driving change:</p>
                                          <ul style='line-height:1.6;'>
                                             <li style='color:#fb7527; font-size: 15px;'>Renewable Energy:<span style='color:#000000;'>Rapid growth in solar, wind, and hydropower is replacing fossil fuels and cutting carbon emissions.</span></li>
@@ -86,7 +86,7 @@
                             <table role='presentation' width='100%' cellspacing='0' cellpadding='0' border='0'>
                                 <tr>
                                     <td style='padding:10px 0;'>
-                                        <img src='Assets/Img/sep-6-3.jpg' alt='The New Wave of Fashion Consumerism: Shaping Trends and Sustainability.' style='width:100%; max-width:560px; border-radius:8px;'>
+                                        <img src='Assets/Img/sep-6-3.jpg' alt='The New Wave of Fashion Consumerism: Shaping Trends and Sustainability' style='width:100%; max-width:560px; border-radius:8px;'>
                                           <p style='margin:0 0 20px; font-size:16px;'>Consumer behavior in fashion is evolving rapidly, with new priorities and innovations transforming the industry. Here’s how fashion and design are shifting in today’s market:</p>
                                        <ul style='line-height:1.6;'>
                                         <li style='color:#fb7527; font-size: 15px;'>Rise of Sustainable Fashion:<span style='color:#000000;'> Consumers prefer eco-friendly brands with ethical production.</span></li>
