--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                <!----------------- Box with Title, Description, Image, Double List and content ends ------------------>
                  <tr style='margin:20px 0;display:block;'>
                         <td style='padding:20px;border:2px solid #fb7527;border-radius:10px;'>
-                            <h2 style='margin:0 0 10px; font-size:20px; color:#00008b;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>The New Wave of Fashion Consumerism:Shaping Trends and Sustainability</h2>  
+                            <h2 style='margin:0 0 10px; font-size:20px; color:#00008b;border-bottom: 2px solid #ffe0ce;padding-bottom: 10px;'>Connect and collect: share and score</h2>  
                             <table role='presentation' width='100%' cellspacing='0' cellpadding='0' border='0'>
                                 <tr>
                                     <td style='padding:10px 0;'>
